[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
colored = "2.0.0"
glob = "0.3.0"
regex = "1.5.4"
terminal_size = "0.1.17"
thiserror = "1.0.30"
